# Meadow.Daemon

./: .gitignore  README.md
.github/workflows/: release.yml
Doc/: apt-installation.md  ota-updates.md
Doc/Samples/Avalonia OtA/: 01-install-daemon.md  02-install-dotnet.md  03-provision-device.md  04-setup-app.md  05-perform-update.md  06-troubleshooting.md  README.md  app.config.yaml.example  mc-daemon.service.example  meadow.conf.example  meadowapp.service.example
Doc/Samples/Avalonia OtA/MyAvaloniaApp/: App.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  MyAvaloniaApp.csproj  Program.cs  app.config.yaml
Doc/Samples/ansible/: README.md  ansible.cfg  inventory.example.yaml  mc-daemon-playbook.yaml
Doc/Samples/ansible/templates/: mc-daemon.service.j2  meadow.conf.j2
Source/Meadow.Daemon.Client/: Meadow.Daemon.Client.sln
Source/Meadow.Daemon.Client/Samples/AvaloniaUpdateApp/: App.axaml  App.axaml.cs  AvaloniaUpdateApp.csproj  Program.cs  ViewLocator.cs
Source/Meadow.Daemon.Client/Samples/AvaloniaUpdateApp/ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
Source/Meadow.Daemon.Client/Samples/AvaloniaUpdateApp/Views/: MainWindow.axaml  MainWindow.axaml.cs
Source/Meadow.Daemon.Client/Samples/LinuxConsoleSample/: LinuxConsoleSample.csproj  Program.cs
Source/Meadow.Daemon.Client/Samples/LinuxConsoleSample/Properties/: launchSettings.json
Source/mc-daemon/: Cargo.toml  meadow.conf  meadow.conf.example
Source/mc-daemon/.cargo/: config.toml
Source/mc-daemon/src/: cloud_settings.rs  cloud_subscriber.rs  crypto.rs  lib.rs  main.rs  rest_server.rs  update_descriptor.rs  update_parser.rs  update_service.rs  update_store.rs
Source/mc-daemon/tests/: download_tests.rs  store_tests.rs
packaging/: README.md  build-deb.sh  publish-to-gh-pages.sh  update-repo.sh
packaging/debian-template/DEBIAN/: control  postinst  postrm  prerm
packaging/debian-template/etc/: meadow.conf
packaging/debian-template/etc/systemd/system/: mc-daemon.service
