[package]
name = "mc-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", default-features = false, features = ["json", "rustls-tls"] }
paho-mqtt = "0.12.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
