[package]
name = "mc-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", default-features = false, features = ["json", "rustls-tls"] }
paho-mqtt = "0.12.3"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
tokio = { version = "1.20.1", features = ["full"] }
actix-web = "4.2.1"
zip = "0.6.6"
fs_extra = "1.3.0"
oauth2 = "4.4.1"
credentials = "0.12.0"
uname = "0.1.1"
rsa = { version = "0.9.2", features = ["pem"] }
base64 = "0.21.5"
