[package]
name = "mc-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.7", default-features = false, features = ["json", "rustls-tls"] }
paho-mqtt = "0.12.5"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
actix-web = "4.9.0"
zip = "2.2.0"
fs_extra = "1.3.0"
oauth2 = "4.4.2"
credentials = "0.12.0"
uname = "0.1.1"
rsa = { version = "0.9.6", features = ["pem"] }
base64 = "0.22.1"
aes = "0.8"
block-modes = "0.8"           # For block cipher modes (e.g., CBC)
block-padding = "0.3"         # For block padding schemes (e.g., PKCS7)
cbc = "0.1.2"
thiserror = "2.0"
anyhow = "1.0"
openssl = { version = "0.10", features = ["vendored"] }

[profile.dev]
incremental = true
